# RustEditorKit

./: .gitignore  Cargo.toml  README.md  SELECTION_ARCHITECTURE.md  test_text.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
demo/: Cargo.toml
rusteditorkit/: Cargo.toml
rusteditorkit/doc/: API.md  EditorWidget.md  roadmap.md
rusteditorkit/src/: a4.rs  bracket.rs  clipboard.rs  core.rs  crossplatform.rs  cursor.rs  editing.rs  fileio.rs  imcontext.rs  indent.rs  lib.rs  mod.rs  mouse_selection.rs  multicursor.rs  navigation.rs  render.rs  search.rs  selection.rs  tests.rs  undo.rs
rusteditorkit/src/config/: api_config_loader.rs  config.ron  configuration.rs  editor_config_loader.rs  mod.rs
rusteditorkit/src/corelogic/: buffer.rs  clipboard.rs  cursor.rs  dispatcher.rs  editing.rs  fileio.rs  font.rs  gutter.rs  layout.rs  line_height.rs  mod.rs  mouse.rs  pointer.rs  scroll.rs  search.rs  selection.rs  size_config.rs  undo.rs  widget_sizing.rs
rusteditorkit/src/editorwidget/: editor.rs  mod.rs  render.rs
rusteditorkit/src/keybinds/: editor_action.rs  linux.rs  mac.rs  mod.rs  win.rs
rusteditorkit/src/render/: background.rs  cache.rs  cursor.rs  gutter.rs  highlight.rs  invalidate.rs  layout.rs  mod.rs  pointer.rs  selection.rs  text.rs  theme.rs
rusteditorkit/src/utilits/: mod.rs  size_utils.rs  ui.rs  widget_sizing.rs
rusteditorkit/src/widget/: config.rs  editor.rs  focus.rs  input.rs  mod.rs  mouse.rs  pointer.rs  scrollable.rs  signals.rs  size_config_impl.rs  size_mode.rs
unit_tests/: Cargo.toml
(+13 files in other folders)
