[package]
name = "RustEditorKit"
version = "0.0.1"
edition = "2021"
description = "A Rust editor toolkit for GTK4."
authors = ["Kim Skov Rasmussen"]
license = "MIT OR Apache-2.0"

[dependencies]
gtk4 = "0.10.0"
gio = "0.21.0"
cairo-rs = "0.21.0"
syntect = "5.2.0"
pangocairo = "0.21.0"
glib = "0.21.0 "