
[package]
name = "rusteditorkit"
version = "0.0.1"
edition = "2021"
description = "A Rust editor toolkit for GTK4."
authors = ["Kim Skov Rasmussen"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ranrar"
readme = "README.md"
keywords = ["gtk", "editor", "rust"]
categories = ["gui", "text-editors"]

[dependencies]
gdk4-sys = "0.7"
font-kit = "0.14"
gtk4 = "0.10.0"
gdk4 = "0.10.0"
gio = "0.21.0"
cairo-rs = "0.21.0"
syntect = "5.2.0"
pangocairo = "0.21.0"
glib = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"